Use non-minified files where jsdelivr auto-generated the minified version
https://www.jsdelivr.com/using-sri-with-dynamic-files

--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -36,52 +36,52 @@
         integrity="sha384-fTp2I0abasco+1TIQhjTbS/v5ihiE09Kbng/klOF2y/DtZCcieGzK+ierZKtNBBx"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/lib/codemirror.min.js"
-        integrity="sha384-I8qTInxGuHBUTrKwAEe7f6unZk1duygLU7YXXtvbu+vC2fB/PqW2C2AzCoMHs6LL"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/lib/codemirror.js"
+        integrity="sha384-72EMm5SsNkNkW4SBDaWjGXA1tZ8V6aXmhnoCBeKLC3tC3QdLjqiyKmcvcwwLd9dB"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/mode/julia/julia.min.js"
-        integrity="sha384-M/B56c5LYW5xoyMZ+7I5uTwn+Omzu8P9fKhc/YQ3ENM7pLOSt1ClLBRcC6iC7AGG"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/mode/julia/julia.js"
+        integrity="sha384-dDyOA8BSiBRH42Ba2yJjj2j5eS8IiLUZfKmb1ZIFQOrthebHHYr2M8RXTeMk7ibZ"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/mode/loadmode.min.js"
-        integrity="sha384-JlYZNznAJ6kt/dSMcu9XovRQJpbHp+UEerNnQ71mQ0UOuLHuuqfQ+XlGBf/FoQyT"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/mode/loadmode.js"
+        integrity="sha384-7hBw6jBbJ/s4Xx7mLc5Wyn+HzZpkNCqS5aiVPo/UN0TzlK7Wim4Y9Ro5Zzl/AaKt"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/mode/meta.min.js"
-        integrity="sha384-LQSN6mnF5HuaNhLWCsTD7rPsHBOxXOTbbdfRz+ON9sw5DL2sbbE3Dkg6maYgqlgd"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/mode/meta.js"
+        integrity="sha384-BLItIXOFMTGM9GrO7fY9231R6ArtCltRiN4Lh/IBKJctdrOuCkFOB1PtlNs8ISdL"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/hint/show-hint.min.js"
-        integrity="sha384-gXh5i/qGQ88Z/N+gwafvmLemUpr3sXJ46iGm8MKniJLFFerIuM0e6PZv54WRPBfb"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/hint/show-hint.js"
+        integrity="sha384-WTj5X80RzO8GQN6UEHne/9THGeveBMzIpTXUfoMSzDvqXQGzh++7ZFK+33hYTU5o"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/display/placeholder.min.js"
-        integrity="sha384-GyXVU5fiyIzLZ1f5Rzq5tk+U59yNYKVD9o8rMORSCTYmpZDG321uQ/rT41pKH19O"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/display/placeholder.js"
+        integrity="sha384-SO+Sl+6+Z11Y+Ff3CUw+EQ3HwTmgQKvT7pPWV7kspErXiXlr2paY8L6ncstTbM7W"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/edit/matchbrackets.min.js"
-        integrity="sha384-KN+Sh64Liagu/TFikVZmTuhVs/49Sp6taW1o8+D0xQEVOGI7/EejVQYETgZyay8o"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/edit/matchbrackets.js"
+        integrity="sha384-LZH4xRVaSl6beetMgx4Vk8rEk6TjkniY7bMeaxalEOgDw0OpZupY6E2DNj3FCTXg"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/runmode/runmode.min.js"
-        integrity="sha384-QuTPRaeZkxOvr+c7n9CUd+KRl1u/KQWO1BUC86SA8TpV1YjKLdwFW5UcHDxP6FvL"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/runmode/runmode.js"
+        integrity="sha384-TlYFNblNR2fkiNJC0nBHHyl3e0I1XHjof9bfCe3c60HnatZeRyD1QiBo9XsXPRDg"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/comment/comment.min.js"
-        integrity="sha384-o0r7YIj3qWZpYsk7KnivDj6MiC9Jrjk5HmJUTBzyD26O6eJDHBoqsIWRCdFiUPXJ"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/comment/comment.js"
+        integrity="sha384-9DhHgfq6UM4zof0h5vmcK6l4yw+gwDnXMRstHP+QxqU+a8zUrkqTJ/F+ArGE24sa"
         crossorigin="anonymous" defer></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/edit/closebrackets.min.js" defer></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/search/searchcursor.min.js" defer></script> -->
     <link rel="stylesheet" crossorigin="anonymous"
-        href="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/lib/codemirror.min.css"
-        integrity="sha384-p4ahNf4SDO1NqgFLODUmBh63S/DacV24rfO5DvFXJaaMfo5sXiKAgLz1fjlG0JwN"/>
+        href="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/lib/codemirror.css"
+        integrity="sha384-KsbK45E17r4hdzdJB8hf/poBTYi0oDktKdCAyP67Uc9lE9Amf83NF+Vf6VJZ6mRK"/>
     <link rel="stylesheet" crossorigin="anonymous"
-        href="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/hint/show-hint.min.css"
-        integrity="sha384-NSxX+j3ACfCgvo2IAYEsdWkrhZoHLiLgZxcvll+xk3CwS7TpyGAnDZhpTmu6oyJs"/>
+        href="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/hint/show-hint.css"
+        integrity="sha384-ZZbLvEvLoXKrHo3Tkh7W8amMgoHFkDzWe8IAm1ZgxsG5y35H+fJCVMWwr0YBAEGA"/>
     <script
-        src="https://cdn.jsdelivr.net/npm/ansi_up@5.0.1/ansi_up.min.js"
-        integrity="sha384-rLn2uCv2YtVem7eZjB5k0z57HTdm68f/EWc2LOyxjdu8UjOL4KwTFyfBuLvgnx1U"
+        src="https://cdn.jsdelivr.net/npm/ansi_up@5.0.1/ansi_up.js"
+        integrity="sha384-FaT2nmaUscUwv2L8ojBNR8O+t7/1dB7HorWaNou5TX1mHlUeIJ5atMSKYxJqt2wX"
         crossorigin="anonymous" defer></script>
 
     <!-- @import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,500,700&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext"); -->
