--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,23 +26,23 @@
         integrity="sha384-puTWMrPXLOGQnFXpGilbRDiGIrohFMYhoqp9Ot/ZuJpZyZ23hA0ozqEqs75pycVy"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/lib/codemirror.min.js"
-        integrity="sha384-I8qTInxGuHBUTrKwAEe7f6unZk1duygLU7YXXtvbu+vC2fB/PqW2C2AzCoMHs6LL"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/lib/codemirror.js"
+        integrity="sha384-72EMm5SsNkNkW4SBDaWjGXA1tZ8V6aXmhnoCBeKLC3tC3QdLjqiyKmcvcwwLd9dB"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/hint/show-hint.min.js"
-        integrity="sha384-gXh5i/qGQ88Z/N+gwafvmLemUpr3sXJ46iGm8MKniJLFFerIuM0e6PZv54WRPBfb"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/hint/show-hint.js"
+        integrity="sha384-WTj5X80RzO8GQN6UEHne/9THGeveBMzIpTXUfoMSzDvqXQGzh++7ZFK+33hYTU5o"
         crossorigin="anonymous" defer></script>
     <script
-        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/display/placeholder.min.js"
-        integrity="sha384-GyXVU5fiyIzLZ1f5Rzq5tk+U59yNYKVD9o8rMORSCTYmpZDG321uQ/rT41pKH19O"
+        src="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/display/placeholder.js"
+        integrity="sha384-SO+Sl+6+Z11Y+Ff3CUw+EQ3HwTmgQKvT7pPWV7kspErXiXlr2paY8L6ncstTbM7W"
         crossorigin="anonymous" defer></script>
     <link rel="stylesheet" crossorigin="anonymous"
-        href="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/lib/codemirror.min.css"
-        integrity="sha384-p4ahNf4SDO1NqgFLODUmBh63S/DacV24rfO5DvFXJaaMfo5sXiKAgLz1fjlG0JwN">
+        href="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/lib/codemirror.css"
+        integrity="sha384-KsbK45E17r4hdzdJB8hf/poBTYi0oDktKdCAyP67Uc9lE9Amf83NF+Vf6VJZ6mRK"/>
     <link rel="stylesheet" crossorigin="anonymous"
-        href="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/hint/show-hint.min.css"
-        integrity="sha384-NSxX+j3ACfCgvo2IAYEsdWkrhZoHLiLgZxcvll+xk3CwS7TpyGAnDZhpTmu6oyJs">
+        href="https://cdn.jsdelivr.net/npm/codemirror@5.60.0/addon/hint/show-hint.css"
+        integrity="sha384-ZZbLvEvLoXKrHo3Tkh7W8amMgoHFkDzWe8IAm1ZgxsG5y35H+fJCVMWwr0YBAEGA"/>
 
 
     <link rel="stylesheet" crossorigin="anonymous"
