Add highlightjs, fix #1542

--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="./treeview.css" type="text/css" />
     <link rel="preload" href="./juliamono.css" as="style">
     <link rel="preload" href="./vollkorn.css" as="style">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.2.0/build/styles/atom-one-light.min.css">
 
     <!-- The instant feedback form at the bottom of the page uses Google Firestore to save feedback. -->
     <script src="https://cdn.jsdelivr.net/npm/firebase@7.13.1/firebase-app.js" defer></script>
