--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -21,6 +21,16 @@
         navigator.serviceWorker?.register(document.head.querySelector("link[rel='pluto-sw']").getAttribute("href"), { scope: "./" }).catch(console.warn)
     </script>
 
+<script type="importmap">
+    {
+        "imports": {
+            "/imports/CodemirrorPlutoSetup.js": "/imports/codemirror-pluto-setup-bundle.min.js"
+        }
+    }
+</script>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/iframe-resizer@4.2.11/js/iframeResizer.min.js" defer></script>
