--- a/frontend/sample.html
+++ b/frontend/sample.html
@@ -10,18 +10,18 @@
     </script>
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./img/favicon-96x96.png">
     <meta name="description" content="Pluto.jl notebooks" />
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
 
 </head>
 
 <body>
     <div id="title">
-        <h1>welcome to <img src="img/logo.svg"></h1>
+        <h1>welcome to <img src="./img/logo.svg"></h1>
         <main>
             <p class="new">Samples:</p>
             <ul class="new">
