--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -9,7 +9,10 @@
             "Pluto.jl, by Fons van der Plas (https://github.com/fonsp), Mikołaj Bochenski (https://github.com/malyvsen), Michiel Dral (https://github.com/dralletje) and friends 🌈"
         )
     </script>
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#2a2928">
+    <meta name="color-scheme" content="light dark">
+
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="./img/favicon-96x96.png" />
@@ -36,7 +39,7 @@
     <link rel="stylesheet" href="./treeview.css" type="text/css" />
     <link rel="preload" href="./juliamono.css" as="style" />
     <link rel="preload" href="./vollkorn.css" as="style" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.2.0/build/styles/atom-one-light.min.css" />
+    <link rel="stylesheet" href="./highlightjs.css" type="text/css">
 
     <!-- [automatically generated launch parameters can be inserted here] -->
 
