--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -50,5 +50,9 @@
     <script type="text/javascript" id="MathJax-script" not-the-src-yet="https://cdn.jsdelivr.net/npm/mathjax@3.1.2/es5/tex-svg-full.js" async></script>
 </head>
 
-<body class="loading no-MαθJax"></body>
+<body class="loading no-MαθJax">
+
+<pluto-editor class="fullscreen"></pluto-editor>
+
+</body>
 </html>
