fix new notebook layout

--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -51,8 +51,8 @@
 </head>
 
 <body class="loading no-MαθJax">
-
+<div style="display: flex; min-height: 100vh;">
 <pluto-editor class="fullscreen"></pluto-editor>
-
+</div>
 </body>
 </html>
